# iacecil

./: .gitignore  AGENTS.md  CHANGES.txt  CLAUDE.md  CONCEPTS.md  Dockerfile  Dockfile  GEMINI.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  STRATEGY.md  deploy.bash  pyproject.toml  requirements.txt  setup.cfg  setup.py  start.py
.gemini/skills/create-meta-prompts/: SKILL.md
doc/: default_config.py  default_env  tg-matebot.service
doc/instance.example/: _bots.py
doc/instance.example/bots/: default.py  matehackersbot.py
docs/: env.example  iacecil.service.example
docs/brainstorms/: 2026-06-10-connector-abc-requirements.md  2026-06-16-decouple-web-survival-slice1-requirements.md  2026-06-16-pluggable-persistence-requirements.md
docs/brainstorms/completed/: 2026-06-14-aiogram-3-architecture-requirements.md  2026-06-14-python-packaging-modernization-requirements.md
docs/connectors/: discord.md  matrix.md  xmpp.md
docs/ideation/: 2026-06-10-platform-agnostic-ideation.html  2026-06-13-python-packaging-modernization-ideation.html  2026-06-16-pluggable-persistence-and-model-neutrality.md  decouple-quart-from-connectors-2026-06-15.md
docs/instance.example/bots/: default.py  matehackersbot.py
docs/plans/: 2026-06-10-001-feat-connector-abc-plan.md  2026-06-13-aiogram3-core-migration-plan.md  2026-06-13-aiogram3-filter-migration-master-plan.md  2026-06-13-deepseek-py-aiogram3-refactor-plan.md  2026-06-13-feedback-py-aiogram3-refactor-plan.md  2026-06-13-garimpo-py-aiogram3-refactor-plan.md  2026-06-13-pacume-py-aiogram3-refactor-plan.md  2026-06-13-random-texts-py-aiogram3-refactor-plan.md  2026-06-14-001-chore-semver-tag-rewrite-plan.md  2026-06-14-002-chore-update-dockerfile-plan.md  2026-06-14-aiogram-3-architecture-plan.md  2026-06-16-002-feat-xmpp-muc-echo-plan.md  2026-06-16-003-feat-matrix-connector-channels-plan.md  2026-06-16-004-fix-matrix-e2ee-key-lifecycle-plan.md
docs/plans/completed/: 2026-06-10-002-feat-echo-everywhere-connectors-plan.md  2026-06-13-aiogram3-formatting-migration-master-plan.md  2026-06-13-bsc-handlers-py-aiogram3-refactor-plan.md  2026-06-13-donate-py-aiogram3-refactor-plan.md  2026-06-13-eth-handlers-py-aiogram3-refactor-plan.md  2026-06-13-log-py-aiogram3-refactor-plan.md  2026-06-13-pave-py-aiogram3-filter-refactor-plan.md  2026-06-13-ytdl-py-aiogram3-refactor-plan.md  2026-06-14-001-chore-semver-tag-rewrite-plan.md  2026-06-14-python-packaging-modernization-plan.md  2026-06-16-001-feat-discord-connector-echo-plan.md  2026-06-16-004-fix-matrix-e2ee-key-lifecycle-plan.md
docs/prompts/: 003-discord-connector-echo.md
docs/prompts/completed/: 001-pluggable-persistence-ideation.md  002-decouple-web-connectors-ideation.md  003-discord-connector-echo.md
docs/solutions/architecture-patterns/: aiogram-handler-registration-order.md  connector-self-declared-activation.md  echo-everywhere-multi-connector-architecture-2026-06-12.md  strangler-fig-dispatch-arbitration.md
docs/solutions/build-errors/: aiogram-matrix-nio-dependency-conflict-2026-06-13.md
docs/solutions/conventions/: protective-comments-for-agents-2026-06-12.md
docs/solutions/database-issues/: zodb-objects-returned-after-connection-close.md
docs/solutions/design-patterns/: blocking-client-asyncio-bridge.md  filesystem-safe-path-components.md  logging-handler-recursion-guard.md
docs/solutions/integration-issues/: aiogram-3-bot-connector-migration-2026-06-14.md  matrix-e2ee-decryption-fix-2026-06-16.md  matrix-e2ee-echo-fix-2026-06-16.md
docs/solutions/logic-errors/: bounded-deque-requeue-eviction.md  connector-load-guard-and-single-pass.md  discord-connector-logic-fixes-2026-06-16.md
docs/solutions/test-failures/: connector-conformance-echo-test-blocked-by-authorization-check.md  tests-deleted-real-instance-zodb.md
docs/solutions/tooling-decisions/: python-packaging-modernization-2026-06-14.md
docs/versioning/: SEMVER.md  tag-mapping.tsv
iacecil/: __init__.py
iacecil/controllers/: amazon_boto.py  assertions.py  ffmpeg_wrapper.py  furhat_bot.py  log.py  quart_app.py  util.py  zodb_orm.py
iacecil/controllers/aiogram_bot/: __init__.py  bot.py  callbacks.py  filters.py
iacecil/controllers/furhat_bot/: __init__.py  papagaio.py  remote_api.py  tests.py
iacecil/controllers/persistence/: zodb_orm.py
iacecil/models/: __init__.py  furhat_models.py
plugins/: __init__.py  admin.py  amazon_boto.py  archive.py  calendar.py  default.py  donate.py  echo.py  feedback.py  furhat_experiments.py  garimpo.py  hashes.py  log.py  mate_matica.py  natural.py  portaria.py  qr.py  storify.py  tc.py  test_scripts.py  tropixel.py  tts.py  welcome.py  ytdl.py
plugins/calendar/: __init__.py
plugins/cryptoforex/: __init__.py  api_coinmarketcap.py
plugins/furhat_experiments/: __init__.py  papagaio.py  personas.py
plugins/greatful/: __init__.py  atividade.py  chegreat.py  semana.py
plugins/persistence/: zodb_orm.py
plugins/personalidades/: __init__.py  cryptoforex.py  default.py  matebot.py  metarec.py
plugins/totalvoice/: __init__.py
plugins/web3_wrapper/: __init__.py  bsc_handlers.py  eth_handlers.py
prompts/: 001-pluggable-persistence-ideation.md  002-decouple-web-connectors-ideation.md
scripts/versioning/: apply_tag_mapping.sh  gen_tag_mapping.py
src/iacecil/: __init__.py  __main__.py  _version.py  config.py
src/plugins/: admin.py  archive.py  borogodo.py  deepseek.py  default.py  donate.py  echo.py  fediboard.py  feedback.py  garimpo.py  hashes.py  mate_matica.py  natural.py  openai.py  portaria.py  qr.py  storify.py  tc.py  tropixel.py  tts.py  welcome.py  ytdl.py
tests/: conftest.py  test_aiogram_v3_core.py  test_chat_store.py  test_connector_conformance.py  test_connectors_runner.py  test_discord.py  test_envelope.py  test_log_sinks.py  test_loopback.py  test_manager.py  test_mastodon.py  test_matrix.py  test_neutral_v2.py  test_path_utils.py  test_person.py  test_personalities.py  test_plugin_loading.py  test_telegram_envelope.py  test_telegram_v3_connector.py  test_v3_lifecycle_integration.py  test_v3_runner.py  test_xmpp.py
(+202 files in other folders)
