[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "iacecil"
version = "0.3.0"
description = "ia.cecil"

[tool.poetry.dependencies]
python = "==3.11"
aiodns = "*"
aiogram = "==2.25.1"
aiohttp = {extras = ["speedups"], version = ">=3.10"}
apscheduler = "*"
beautifulsoup4 = "*"
boto3 = "*"
brotlipy = "*"
colorama = "*"
"discord.py" = "*"
ffmpeg-python = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
furhat-remote-api = "*"
google-search-results = "*"
graphviz = "*"
install-requires = "*"
lxml = "*"
matplotlib = "*"
"Mastodon.py" = "*"
"matrix-nio" = "*"
mpmath = "*"
natsort = "*"
networkx = {extras = ["default"], version = "*"}
nltk = "*"
numpy = "*"
ollama = "*"
openai = "*"
pandas = "*"
pydantic = {extras = ['dotenv'], version = "*"}
pypng = "*"
pyqrcode = "*"
python-telegram-bot = "*"
pytz = "*"
quart = "*"
requests = "*"
slixmpp = "*"
sympy = "*"
tabulate = "*"
ujson = "*"
urllib3 = "*"
uvicorn = "*"
uvloop = "*"
validators = "*"
web3 = "*"
youtube-dl = "*"
yt-dlp = "*"
"zc.zlibstorage" = "*"
zodb = "*"
pydantic-settings = "*"
quart-flask-patch = "*"

[tool.poetry.dev-dependencies]
iacecil = {path = ".", version = "*"}
