[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iacecil"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "Iuri Guilherme", email = "2027447+iuriguilherme@users.noreply.github.com"}
]
maintainers = [
    {name = "Iuri Guilherme", email = "2027447+iuriguilherme@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Matplotlib",
    "Framework :: Quart",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
description = "Chatbot framework and set of tools"
dynamic = ["version"]

dependencies = [
    "aiodns",
    "aiohttp[speedups]>=3.10",
    "apscheduler==3.11.1",
    "beautifulsoup4==4.14.2",
    "boto3==1.40.76",
    "brotlipy==0.7.0; sys_platform != 'win32'",
    "colorama==0.4.6",
    "ffmpeg-python==0.2.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "google-search-results==2.4.2",
    "graphviz==0.21",
    "lxml==6.0.2",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "natsort==8.4.0",
    "networkx[default]==3.4.2",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "ollama==0.6.1",
    "openai==2.8.1",
    "pandas==2.3.3",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pypng==0.20220715.0",
    "pyqrcode==1.2.1",
    "pytz==2025.2",
    "quart==0.20.0",
    "quart-flask-patch==0.3.0",
    "requests==2.32.5",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "ujson==5.11.0; sys_platform != 'win32'",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1; sys_platform != 'win32'",
    "validators==0.35.0",
    "youtube-dl==2021.12.17",
    "yt-dlp==2025.11.12",
    "zc.zlibstorage==1.2.0",
    "zodb==6.1",
]

[project.optional-dependencies]
telegram = [
    "aiogram>=2.25.1",
    "python-telegram-bot==22.5",
]
discord = [
    "discord.py",
]
mastodon = [
    "Mastodon.py",
]
matrix = [
    "matrix-nio[e2e]",
]
xmpp = [
    "slixmpp",
]
furhat = [
    "furhat-remote-api==1.0.2",
]
web3 = [
    "web3==7.14.0",
]
all = [
    "iacecil[telegram,discord,mastodon,matrix,xmpp,furhat,web3]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pip-tools",
]

[project.scripts]
iacecil = "iacecil.__main__:main"

[project.urls]
homepage = "https://iuri.xyz/iacecil/"
repository = "https://github.com/iuriguilherme/iacecil/"
issues = "https://github.com/iuriguilherme/iacecil/issues/"

[tool.setuptools.dynamic]
version = {attr = "iacecil._version.__version__"}

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["iacecil*", "plugins*"]

[tool.poetry]
# Kept for secondary compatibility with poetry users
[tool.poetry.scripts]
iacecil = "iacecil.__main__:main"
prod = "iacecil production"
dev = "uvicorn src.iacecil.controllers._iacecil.development:app --reload"
paola = "iacecil fpersonas"

[tool.pipenv.scripts]
# Kept for secondary compatibility with pipenv users
prod = "python -m iacecil production"
connectors = "python -m iacecil connectors"
test = "python -m iacecil"
dev = "uvicorn src.iacecil.controllers._iacecil.development:app --reload"
paola = "python -m iacecil fpersonas"
# Legacy/Commented scripts from original Pipfile
# quart = "python start.py info quart ic 8000 127.0.0.1"
# stage = "python start.py info socket cf,ic,mbt,mr,pc,pc2,pv,bdm,bdt,bdn,ps,tc 38000 127.0.0.1 0"
# stagetest = "python start.py debug socket cf,ic,mbt,mr,pc,pc2,pv,bdm,bdt,bdn,ps,tc 38000 127.0.0.1 0"
# furhat = "python start.py debug furhat test"
# papagaio = "python start.py debug fpapagaio f239 True"
# personas = "python start.py debug fpersonas f239 ic_fh,mb_fh,pc_fh 1"
