[metadata]
name = iacecil
## https://github.com/pypa/pipenv/issues/5360
#version = attr: iacecil.__version__
version = v0.2.1
description = attr: iacecil.__description__
summary = attr: iacecil.__description__
author = Iuri Guilherme
author_email = 2027447+iuriguilherme@users.noreply.github.com
maintainer = Iuri Guilherme
maintainer_email = 2027447+iuriguilherme@users.noreply.github.com
home_page = https://iuri.xyz/iacecil/
url = https://iuri.xyz/iacecil/
project_urls =
    Source Code = https://github.com/iuriguilherme/iacecil/
    Issue Tracker = https://github.com/iuriguilherme/iacecil/issues/
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_files =
    LICENSE.md
description_file =
    README.md
    LICENSE.md
    CHANGES.txt
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Framework :: FastAPI
    Framework :: Flask
    Framework :: Matplotlib
    Framework :: Quart
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Communications
    Topic :: Communications :: Chat
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artifical Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
#packages = find:
packages = 
    iacecil
    plugins
package_dir = src
include_package_data = True
zip_safe = False

[options]
#packages = find:
packages = 
    iacecil
    plugins
package_dir = = src
include_package_data = True
python_requires = >= 3.10
install_requires =

[files]
packages = find:
package_dir = = src
extra_files =
    CHANGES.txt
    LICENSE.md
    README.md
